force-app/main/default/objects/Risk__c/Risk__c.object-meta.xml
<CustomObject>
    <description>Risks help understand the status from many sources rather than a single project manager.  Risks, similar to status reports, can/should be entered by project team members.  By create a new &quot;app&quot; in your Salesforce instance, you can segregate the tabs for project team members (i.e. - create an app called &quot;Project Team Member&quot; with 3 tabs Team Member Assignments, Risks, Status Reports).  Help and Training will guide you through creating new apps.  In Enterprise Edition, you can then make that app the default for a team member.</description>
    <label>Risk</label>
    <nameField>
        <displayFormat>Risk-{MM}{YYYY}{0}</displayFormat>
        <label>Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>