force-app/main/default/objects/Risk__c/fields/Estimated_Cost_Impact__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_Impact__c</fullName>
    <label>Estimated Cost Impact</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>