force-app/main/default/objects/Risk__c/fields/Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Risk_Description__c</fullName>
    <label>Risk Description</label>
    <type>TextArea</type>
</CustomField>