force-app/main/default/objects/Risk__c/fields/Risk_Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Risk_Mitigation_Plan__c</fullName>
    <label>Risk Mitigation Plan</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>