force-app/main/default/objects/Risk__c/fields/Risk_Probability__c.field-meta.xml
<CustomField>
    <fullName>Risk_Probability__c</fullName>
    <label>Risk Probability (%)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>