force-app/main/default/objects/Risk__c/fields/Risk_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Resolution_Date__c</fullName>
    <label>Risk Resolution Date</label>
    <type>Date</type>
</CustomField>