force-app/main/default/objects/Risk__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <label>Risk Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Economic</fullName>
            </value>
            <value>
                <fullName>Organizational</fullName>
            </value>
            <value>
                <fullName>Process/Operational</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Execution/implementation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>