force-app/main/default/objects/Risk__c/fields/Rsik_Status__c.field-meta.xml
<CustomField>
    <fullName>Rsik_Status__c</fullName>
    <label>Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anticipated</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed - Mitigated</fullName>
            </value>
            <value>
                <fullName>Closed - Scope Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>