force-app/main/default/objects/Risk__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <inlineHelpText>Please enter the impact of the risk on the project.</inlineHelpText>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Potential Future Need</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>